RESOLVED FIXED215332
MobileSafari crashes at WebCore: -[WebAVPlayerController seekToTime:toleranceBefore:toleranceAfter:]
https://bugs.webkit.org/show_bug.cgi?id=215332
Summary MobileSafari crashes at WebCore: -[WebAVPlayerController seekToTime:tolerance...
Peng Liu
Reported 2020-08-10 12:58:40 PDT
MobileSafari crashes at WebCore: -[WebAVPlayerController seekToTime:toleranceBefore:toleranceAfter:]
Attachments
Patch (1.52 KB, patch)
2020-08-10 13:01 PDT, Peng Liu
eric.carlson: review+
Patch for landing (1.51 KB, patch)
2020-08-10 13:34 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-08-10 12:59:38 PDT
Peng Liu
Comment 2 2020-08-10 13:01:55 PDT
Eric Carlson
Comment 3 2020-08-10 13:21:06 PDT
Comment on attachment 406321 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406321&action=review > Source/WebCore/ChangeLog:8 > + Add a NULL pointer checking to fix a crash. s/checking/check/
Peng Liu
Comment 4 2020-08-10 13:34:24 PDT
Created attachment 406324 [details] Patch for landing
Peng Liu
Comment 5 2020-08-10 13:34:43 PDT
Comment on attachment 406321 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406321&action=review >> Source/WebCore/ChangeLog:8 >> + Add a NULL pointer checking to fix a crash. > > s/checking/check/ Fixed.
EWS
Comment 6 2020-08-10 15:17:55 PDT
Committed r265457: <https://trac.webkit.org/changeset/265457> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406324 [details].
Note You need to log in before you can comment on or make changes to this bug.