MobileSafari crashes at WebCore: -[WebAVPlayerController seekToTime:toleranceBefore:toleranceAfter:] https://bugs.webkit.org/show_bug.cgi?id=215332

Reviewed by Eric Carlson.

Add a NULL pointer check to fix a crash.

* platform/ios/WebAVPlayerController.mm:
(-[WebAVPlayerController seekToTime:toleranceBefore:toleranceAfter:]):


Canonical link: https://commits.webkit.org/228128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265457 268f45cc-cd09-0410-ab3c-d52691b4dbfc